tests/integration/fail/and_number_bool.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::NAryPrimopTypeError'
0 && true
